Fixed module import errors

--- a/package.json
+++ b/package.json
@@ -58,7 +58,11 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@clerk/shared",
+      "@firebase/util",
       "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "protobufjs"
     ]
   }
 }
