--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "strict": false,
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
